--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-image-gallery": "^1.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
